--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nedb": "^1.8.0",
     "rss-parser": "^3.5.4",
     "telebot": "^1.2.6",
+    "tslint": "^5.12.1",
     "typescript": "^3.2.1"
   },
   "scripts": {
