--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "^3.2.1"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "build": "tsc"
   }
 }
