--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/request": "^2.48.1",
     "@types/telebot": "^1.2.1",
     "@types/xml2js": "^0.4.3",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.1.0",
     "nedb": "^1.8.0",
     "rss-parser": "^3.5.4",
     "telebot": "^1.2.6",
-    "tslint": "^5.12.1",
     "typescript": "^3.2.1"
   },
   "scripts": {
